fixed a bug with benefits spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,19 @@ h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+/** Paragraph Font and margin spacing **/
+p {
+    font-size: 16px;
+    margin-bottom: 32px;
+}
+/** Footer Section **/
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    font-size: 20px;
+}
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -86,11 +99,6 @@ h3 {
     background-color: #0072bb;
     color: #ffffff;
 }
-/** Paragraph Font and margin adjustment for content **/
-.content p {
-    font-size: 16px;
-    margin-bottom: 32px;
-}
 /** Override for benefits section settings separate from content section **/
 .benefits {
     margin-right: 20px;
@@ -109,11 +117,4 @@ h3 {
     margin: 10px auto;
     max-width: 150px;
 }
-/** Footer Section **/
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    font-size: 20px;
-}
+
